--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Doctor // Dasboard</title>
+    <title> Administrator | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -13,27 +13,65 @@
     <style>
     .table {
       border-collapse: separate;
-      border-spacing: 0 40px;
+      border-spacing: 0 30px;
+      text-justify: center;
       text-align: center;
     }
+
+    @keyframes blink {
+      0% {
+        background-color: transparent;
+      }
+
+      50% {
+        background-color: red;
+      }
+
+      100% {
+        background-color: transparent;
+      }
+    }
+
+    .blink {
+      animation: blink 1s infinite;
+    }
   </style>
+    <script>
+    setTimeout(function() {
+      window.location.href = "/redirectToDashboardOhbp";
+    }, 10000);
+  </script>
+
+    <script>
+    function blink() {
+      var elementToBlink = document.getElementById("element-to-blink");
+      elementToBlink.classList.toggle("blink");
+    }
+    var isBlinking = false;
+  </script>
 </head>
 
-<body class="container-max-width p-4">
+<body class="container-max-width p-3">
 <nav class="navbar navbar-expand-md navbar" style="">
     <div class="container-flex">
         <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
             <ul class="navbar-nav">
-                <li class="h3 text-light text-center d-flex flex-grow-1">
+                <li class="h4 text-light text-center">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">Administrator</a>
+                </li>
+                <li class="h4 text-light text-center d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
                 </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">Opservacija</a>
+                <li class="h4 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP Opservacija</a>
                 </li>
-                <li class="h3 text-light text-left d-flex flex-grow-1">
+                <li class="h4 text-light text-left d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti</a>
                 </li>
-                <li class="h3 text-light text-center d-flex flex-grow-1">
+                <li class="h4 text-light text-left d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToPatients'">Pacijenti opservacija</a>
+                </li>
+                <li class="h4 text-light text-center d-flex">
                     <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
                 </li>
             </ul>
@@ -57,41 +95,29 @@
                 <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
-            <div class="d-flex justify-content-center col-md-2">
-                <h3 class="display-4 p-3 d-flex align-items-center justify-content-center flex-grow-1">
-                    <!-- style="background-color:red">-->
-                    <b class="d-flex">
-                        <a href="#" title="hitna" style="text-align: center;">
-                            <img src="../ikone/hslucaj.webp" class="img-responsive"></a></b></h3>
+            <div class="col-md-2 d-flex align-items-center justify-content-end">
+                <button onclick="blink()">
+                    <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
             </div>
         </div>
         <hr class="solid">
     </div>
 </div>
-<div class="row">
+<div class="" style="">
     <div class="container-flex">
-        <div class="row">
-            <div class="col-lg-4 col-md-12 p-3">
-                <h4><b></b></h4>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="py-3" style="">
-    <div class="container-flex">
-        <div class="col">
-            <p class="display-3 text-light p-3 text-center shadow-lg align-items-center justify-content-center" style="background-color: red" text="center"> H </p>
+        <div id="element-to-blink" class="toggleBlink">
+            <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center" >ŽIVOTNO UGROŽENI PACIJENT</h1>
         </div>
     </div>
 </div>
 <div class="">
     <div class="container-flex">
-        <div class="table-responsive" style="">
-            <table class="table table-bordered table-striped">
+        <div class="table-responsive d-flex flex-grow-1" style="">
+            <table class="table table-striped">
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
-                    <th class="font-weight-bold text-center d-flex align-items-center">
-                        <h3 class="text-left justify-content-center align-items-center d-flex">Trijažna kategorija</h3>
+                    <th class="font-weight-bold">
+                        <h3 class=".d-print-table-cell">Trijažna kategorija</h3>
                     </th>
                     <th class="font-weight-bold">
                         <h3 class=".d-print-table-cell">ID Pacijent</h3>
@@ -106,7 +132,7 @@
                         <h3>Vrijeme dolaska</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Retrijaža</h3>
+                        <h3></h3>
                     </th>
                     <th class="font-weight-bold">
                         <h3>Status</h3>
@@ -139,7 +165,7 @@
                     <td class="font-weight-bold">
                         <h3>25.02.2023 10:16</h3>
                     </td>
-                    <td class="font-weight-bold" >
+                    <td class="font-weight-bold">
                         <!-- <h3 >25.02.2023 10:16</h3>-->
                     </td>
                     <td>
@@ -186,6 +212,9 @@
                     </td>
                     <td class="font-weight-bold">
                         <h3>Akutni dio </h3>
+                    </td>
+                    <td>
+                        <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
                     </td>
                 </tr>
                 <tr>
@@ -283,7 +312,7 @@
                         <a href="#" title="hitna"><img src="../ikone/rtg.webp"></a>
                     </td>
                     <td class="font-weight-bold">
-                        <h3>Subakutni</h3>
+                        <h3>Subakutni dio</h3>
                     </td>
                     <td>
                         <a href="#" title="hitna"><img src="../ikone/printer.webp"></a>
@@ -356,12 +385,6 @@
         </div>
     </div>
 </div>
-<div class="py-3">
-    <div class="container">
-        <div class="row">
-        </div>
-    </div>
-</div>
 <div class="p-3 text-muted border-top">
     <div class="container-flex">
         <div class="row d-flex justify-content-between">
@@ -372,5 +395,4 @@
     </div>
 </div>
 </body>
-
 </html>
