--- a/src/main/resources/templates/legend.html
+++ b/src/main/resources/templates/legend.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Administrator | OBZ </title>
+    <title> Tumač znakova | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -164,8 +164,9 @@
                     <td class="font-weight-bold">
                         <h3>OPSERVACIJA</h3>
                     </td>
-                    <td class="font-weight-bold text-nowrap d-flex" >
-                        <h3 class="text-nowrap">Pacijent se nalazi u opservaciji, tj.zbog zdravstvenog stanja potrebna je dodatna medicinska skrb.</h3>
+                    <td class="font-weight-bold text-nowrap">
+                        <h3 class="d-flex" >Pacijent se nalazi u opservaciji, tj.zbog zdravstvenog stanja potrebna je dodatna medicinska skrb.</h3>
+                        <h3 class="d-flex"></h3>
                     </td>
                     <td class="font-weight-bold"></td>
                 </tr>
